--- a/frontend-ember/app/components/event.hbs
+++ b/frontend-ember/app/components/event.hbs
@@ -8,7 +8,9 @@
       <span>End Time:</span> {{@event.end.dateTime}}
     </div>
     <div class="detail location">
-      <span>Location:</span> {{@event.location}}
+      <span>Location:</span>
+        <!-- how do I make this only happen if location starts with https? -->-
+        <a href="{{@event.location}}">{{@event.location}}</a>
     </div>
     <div class="detail">
       <span>Creator:</span> {{@event.creator.displayName}} / {{@event.creator.email}}
