--- a/frontend-ember/app/components/event.hbs
+++ b/frontend-ember/app/components/event.hbs
@@ -8,9 +8,7 @@
       <span>End Time:</span> {{formatDate @event.endDatetime @event.endTimezone}}
     </div>
     <div class="detail location">
-      <span>Location:</span>
-      <!-- how do I make this only happen if location starts with https? -->-
-      <a href="{{@event.location}}">{{@event.location}}</a>
+      <span>Location:</span> {{this.formatLocation @event.location}}
     </div>
     <div class="detail">
       <span>Creator:</span> {{@event.creatorName}} / {{@event.creatorEmail}}
