--- a/frontend-ember/app/components/event.hbs
+++ b/frontend-ember/app/components/event.hbs
@@ -7,7 +7,10 @@
     <div class="detail">
       <span>End Time:</span> {{formatDate @event.endDatetime @event.endTimezone}}
     </div>
-    <div class="detail location">
+    <div class="detail">
+      <span>Type:</span> {{this.formatRecurrence @event.recurrence}}
+    </div>
+    <div class="detail">
       <span>Location:</span> {{this.formatLocation @event.location}}
     </div>
     <div class="detail">
