Add subscribe button and update style to wrap each detail so it's easier to read

--- a/frontend-ember/app/components/event.hbs
+++ b/frontend-ember/app/components/event.hbs
@@ -1,6 +1,6 @@
 <article class="event">
   <div class="details">
-    <h3>{{@event.summary}} </h3>
+    <h3>{{@event.summary}} </h3> <button {{action "subscribe" }}>subscribe</button>
     <div class="detail">
       <span>Start Time:</span> {{formatDate @event.startDatetime @event.startTimezone}}
     </div>
