Wrap those long description lines

--- a/frontend-ember/app/styles/app.scss
+++ b/frontend-ember/app/styles/app.scss
@@ -366,7 +366,7 @@ p {
   flex-basis: 100%;
   font-weight: 300;
   font-style: italic;
-  white-space: nowrap;
+  white-space: wrap;
 }
 
 .event .detail span {
