Rename frontend app to 'Eventageous'

--- a/frontend-ember/app/components/nav-bar.hbs
+++ b/frontend-ember/app/components/nav-bar.hbs
@@ -1,6 +1,6 @@
 <nav class="menu">
   <LinkTo @route="index" class="menu-index">
-    <h1>Americano</h1>
+    <h1>Eventageous</h1>
   </LinkTo>
   <div class="links">
     <LinkTo @route="about" class="menu-about">
