--- a/frontend-ember/app/templates/about.hbs
+++ b/frontend-ember/app/templates/about.hbs
@@ -1,6 +1,6 @@
 <Base>
-  <h2>About Americano</h2>
-  <p>
-    Experimental project for managing group event calendars, particularly in open source projects
-  </p>
+<h2>About Eventageous</h2>
+<p>
+  Experimental project for managing group event calendars, particularly in open source projects
+</p>
 </Base>
