Add option for adding event via web UI, some css fiddling

--- a/frontend-ember/app/components/nav-bar.hbs
+++ b/frontend-ember/app/components/nav-bar.hbs
@@ -1,9 +1,12 @@
-<nav class="menu">
+<nav class="menubar">
   <LinkTo @route="index" class="menu-index">
     <h1>Eventageous</h1>
   </LinkTo>
   <div class="links">
-    <LinkTo @route="about" class="menu-about">
+    <LinkTo @route="new-event">
+      New Event
+    </LinkTo>
+    <LinkTo @route="about">
       About
     </LinkTo>
   </div>
