--- a/frontend-ember/app/styles/app.scss
+++ b/frontend-ember/app/styles/app.scss
@@ -101,6 +101,11 @@ p {
     font-style: italic;
   }
 
+  .links {
+    display: inline-block;
+    padding: 0 21px;
+  }
+
   a {
     text-decoration: none;
     padding: 0 15px;
@@ -108,51 +113,29 @@ p {
     font-size: 20px;
     font-weight: bold;
     display: inline-block;
+    position: relative;
+    bottom: 5px;
+  }
+
+  button {
+    margin-right: 15px;
+    position: relative;
+    top: -1px;
+    left: -5px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    background-color: #262626;
+    cursor: pointer;
+    opacity: 1;
+  }
+
+  button:hover {
+    background-color: #111;
+    opacity: 1;
   }
 }
 
-.menu {
-  height: 4em;
-  background-color: #332421;
-}
-
-.menu h1 {
-  position: relative;
-  padding: 5px 0 0 8px;
-  color: #f9f9f9;
-  font-size: 1.8em;
-  font-style: italic;
-}
-
-.menu a,
-.menu .links {
-  display: inline-block;
-}
-
-.menu a {
-  text-decoration: none;
-  padding: 0 15px;
-  color: #fff;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.menu a:hover,
-.menu a.active {
-  opacity: 1;
-}
-
-.menu .links {
-  padding: 0 21px;
-}
-
-.menu .links a {
-  position: relative;
-  bottom: 5px;
-}
-
-
-/** other stuff **/
+/** Events **/
 
 .events label span {
   font-size: 140%;
@@ -172,29 +155,12 @@ p {
   display: block;
 }
 
-.menu input:focus {
+.events input:focus {
   background-color: #f9f9f9;
   outline: none;
 }
 
-.menu button {
-  margin-right: 15px;
-  position: relative;
-  top: -1px;
-  left: -5px;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-  background-color: #262626;
-  cursor: pointer;
-  opacity: 1;
-}
-
-.menu button:hover {
-  background-color: #111;
-  opacity: 1;
-}
-
-.menu .results {
+.events .results {
   display: none;
   position: absolute;
   width: 215px;
@@ -218,12 +184,38 @@ p {
   background: #f3f3f3;
 }
 
-/**
- * Content Area
- */
-
 .body {
   padding: 15px;
+}
+
+.newevent {
+
+  label span {
+    font-size: 140%;
+    margin: 50px auto 20px;
+    display: block;
+    text-align: center;
+    font-style: italic;
+  }
+
+  input {
+    padding: 11px;
+    font-size: 14px;
+    width: 500px;
+    background-color: rgb(255 255 255 / 75%);
+    border: solid 1px lightgray;
+    display: block;
+  }
+
+  textarea {
+    padding: 11px;
+    font-size: 14px;
+    width: 500px;
+    background-color: rgb(255 255 255 / 75%);
+    border: solid 1px lightgray;
+    display: block;
+}
+
 }
 
 /**
