Add Axum session layer to hold login state and other data

--- a/frontend-ember/app/components/login-button.hbs
+++ b/frontend-ember/app/components/login-button.hbs
@@ -1,5 +1,5 @@
 <div class="login-button-container">
-    {{#if this.session.isLoggedIn}}
+    {{#if this.session.loggedIn}}
         <p>Hi, user!</p>
     {{else}}
         <button type="button" {{on "click" this.redirectToLogin}}>
