Get a first version of GitHub auth working that gets the users email This lacks error handling, cookies, and proper handling in the frontend

--- a/frontend-ember/app/components/login-button.hbs
+++ b/frontend-ember/app/components/login-button.hbs
@@ -1,6 +1,6 @@
 <div class="login-button-container">
     {{#if this.session.loggedIn}}
-        <p>Hi, user!</p>
+        <p>Hi, {{this.session.userEmail}}!</p>
     {{else}}
         <button type="button" {{on "click" this.redirectToLogin}}>
             Login with GitHub
